webhero fix for cut off text
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@89732 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/en-US/firefox/webhero/fb/css/main.css
+++ b/en-US/firefox/webhero/fb/css/main.css
@@ -15,7 +15,6 @@ html {
 
 body {
     width: 520px;
-    height: 1200px;
     background-image: url(../images/bg.jpg);
     background-repeat: no-repeat;
     color: #546a7a;
@@ -137,7 +136,7 @@ p {
     margin-top: 10px;
     background-color: #fff;
     border: 1px solid #b0c1d2;
-    padding: 8px 20px;
+    padding: 8px 10px;
     cursor: pointer;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
